--- a/p3.html
+++ b/p3.html
@@ -15,7 +15,7 @@
    <li><a href="p3.html">Example for programming language </a></li>
      <li><a href="p4.html">programming language information</a></li>
 </ul>
-<img src="programming languageshttps.jpg" alt="title">
+<img src="programming languages.jpg" alt="title">
 
 
 </body>
